--- a/PrimaryHealthcareCentre.DoctorClient/MVVM/View/MedicalCardView.xaml
+++ b/PrimaryHealthcareCentre.DoctorClient/MVVM/View/MedicalCardView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="PrimaryHealthcareCentre.PatientClient.MVVM.View.MedicalCardView"
+﻿<UserControl x:Class="PrimaryHealthcareCentre.DoctorClient.MVVM.View.MedicalCardView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:PrimaryHealthcareCentre.PatientClient.MVVM.View"
-             xmlns:viewModel="clr-namespace:PrimaryHealthcareCentre.PatientClient.MVVM.ViewModel"
+             xmlns:local="clr-namespace:PrimaryHealthcareCentre.DoctorClient.MVVM.View"
+             xmlns:viewModel="clr-namespace:PrimaryHealthcareCentre.DoctorClient.MVVM.ViewModel"
              xmlns:uc="clr-namespace:PrimaryHealthcareCentre.UIComponent.UserControl;assembly=PrimaryHealthcareCentre.UIComponent"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="800">
@@ -51,14 +51,14 @@
                 </StackPanel>
                 <StackPanel Grid.Column="1"
                         VerticalAlignment="Center">
-                    <TextBlock Text="{Binding Patient.FullName}"
+                    <TextBlock Text="{Binding Reception.Patient.FullName}"
                                TextWrapping="WrapWithOverflow"
                            Style="{StaticResource PatientDataTextBlockStyle}" Height="60"/>
-                    <TextBlock Text="{Binding Patient.Gender}"
+                    <TextBlock Text="{Binding Reception.Patient.Gender}"
                            Style="{StaticResource PatientDataTextBlockStyle}"/>
-                    <TextBlock Text="{Binding Patient.DateOfBirth}"
+                    <TextBlock Text="{Binding Reception.Patient.DateOfBirth}"
                            Style="{StaticResource PatientDataTextBlockStyle}"/>
-                    <TextBlock Text="{Binding Patient.PhoneNumber}"
+                    <TextBlock Text="{Binding Reception.Patient.PhoneNumber}"
                            Style="{StaticResource PatientDataTextBlockStyle}"/>
                 </StackPanel>
             </Grid>
@@ -72,13 +72,20 @@
                        VerticalAlignment="Center"
                        HorizontalAlignment="Center"
                        Margin="0,5,0,0"/>
-            <StackPanel>
+            <StackPanel Orientation="Horizontal"
+                        HorizontalAlignment="Center">
                 <TextBox TextWrapping="WrapWithOverflow"
                          AcceptsReturn="True"
                         Height="447"
-                         IsReadOnly="True"
-                         Text="{Binding MedicalCard.MedicalHistory}"
+                         Text="{Binding MedicalHistory}"
                         Style="{StaticResource FieldTextBox}" Width="274"/>
+                <StackPanel VerticalAlignment="Bottom">
+                    <uc:HeaderButton Margin="10,0,0,10"
+                                     Icon="/PrimaryHealthcareCentre.UIComponent;Component/Images/edit.png"
+                                     Style="{StaticResource HeaderButtonStyle}" Cursor="Hand"
+                                     Background="#265F2F"
+                                     Command="{Binding WriteMedCardCommand}"/>
+                </StackPanel>
             </StackPanel>
         </StackPanel>
         <StackPanel Grid.Row="1"
@@ -94,8 +101,7 @@
             <TextBox TextWrapping="WrapWithOverflow"
                       AcceptsReturn="True"
                       Height="182"
-                      IsReadOnly="True"
-                      Text="{Binding MedicalCard.Diagnosis}"
+                     Text="{Binding Diagnosis}"
                       Style="{StaticResource FieldTextBox}" Width="274"/>
         </StackPanel>
     </Grid>
